# neptune-logger

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  justfile
migrations/2020-09-03-040937_create_messages/: up.sql
migrations/2020-09-03-054442_create_attachments/: up.sql
migrations/2020-09-03-161606_create_users/: up.sql
migrations/2020-09-03-161628_create_identities/: up.sql
migrations/2020-09-03-162621_create_channels/: down.sql  up.sql
migrations/2020-09-04-061703_create_users/: up.sql
migrations/2020-09-04-061709_create_channels/: up.sql
migrations/2020-09-04-061727_create_identities/: up.sql
migrations/2020-09-04-061733_create_messages/: up.sql
migrations/2020-09-04-061738_create_attachments/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: attachment.rs  channel.rs  identity.rs  message.rs  mod.rs  user.rs
