[package]
name = "discord-logger"
version = "0.1.0"
authors = ["kyle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.0"
tokio = { version = "0.2.22", features = ["macros"]}
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"]}
diesel_migrations = "1.4.0"
chrono = "0.4"